team-red/input-nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-sample
  namespace: nginx-sample
  labels:
    app: nginx
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
      containers:
        - name: nginx
          image: bitnami/nginx:1.21.6
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
