team-red/input-nginx/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx
  namespace: nginx-sample
  labels:
    app: nginx
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: nginx
